--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </p>
             <div class="project-links">
               <a href="#" class="btn">Live Demo</a>
-              <a href=" https://lalifb.github.io/Traffic_Safety/" class="btn"
+              <a href="  https://lalifb.github.io/TrafficSafety-/" class="btn"
                 >View my project</a
               >
             </div>
